# CS-S-server-downloader

./: README.md  package-lock.json  package.json
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: downloader.rs  main.rs
src/components/: Greet.vue
