[package]
name = "downloader"
version = "1.0.0"
description = "下载器"
authors = ["spk"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0.28"
async_zip = { version = "0.0.16", features = ["full"] }
futures-lite = "=0.1.2"
sanitize-filename = "0.5.0"
tokio-util = "0.7.10"
winreg = "0.51"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
